# toobarr

./: .gitignore  Cargo.toml  Makefile  README.md
toobar/: Cargo.toml  package.json
toobar/migrations/: 001_init.sql  002_extractor_args.sql
toobar/src/handlers/: api.rs
toobar/src/models/: download.rs  mod.rs  settings.rs  video.rs
toobar/templates/: settings.html
toobar/templates/channels/: index.html
toobarr/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
toobarr/src/: db.rs  error.rs  main.rs  nfo.rs  state.rs  thumbnail.rs
toobarr/src/handlers/: pages.rs
toobarr/src/models/: channel.rs
toobarr/src/workers/: download.rs
toobarr/templates/: base.html  downloads.html  home.html
toobarr/templates/channels/: detail.html  new.html
toobarr/templates/partials/: channel_card.html  download_item.html  video_card.html
yt-dlp/: Cargo.toml  README.md
yt-dlp/src/: client.rs  command.rs  error.rs  lib.rs
yt-dlp/src/types/: mod.rs  options.rs  progress.rs  video_info.rs
