[package]
name = "toobarr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "multipart"] }
askama = "0.13"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid7 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
yt-dlp = { path = "../yt-dlp" }
async-stream = "0.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde_json = "1"

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
