[package]
name = "yt-dlp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-stream = "0.3"
tracing = "0.1"
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
